src/gallium/drivers/r600/r600_state.c
@@ -1443,8 +1443,9 @@ static void r600_init_depth_surface(struct r600_context *rctx,
 	surf->htile_enabled = 0;
 	/* use htile only for first level */
 	if (rtex->htile && !level) {
+		uint64_t va = r600_resource_va(rctx->screen, rtex->htile);
 		surf->htile_enabled = 1;
-		surf->db_htile_data_base = 0;
+		surf->db_htile_data_base = va >> 8;
 		surf->db_htile_surface = S_028D24_HTILE_WIDTH(1) |
 					S_028D24_HTILE_HEIGHT(1) |
 					S_028D24_LINEAR(1);
